livecd-rootfs (2.408.43) UNRELEASED; urgency=medium

  * Add a buildd subproject.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Jan 2019 17:45:38 +0000

livecd-rootfs (2.408.42) xenial; urgency=medium

  [ Cody Shepherd ]
  * Backport adding snaps to image manifests (LP: #1805497)

 -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 10 Dec 2018 10:21:47 -0800

livecd-rootfs (2.408.41) xenial; urgency=medium

  * Disable checksum generation (LP: #1799773)

 -- Robert C Jennings <robert.jennings@canonical.com>  Fri, 16 Nov 2018 08:37:57 -0800

livecd-rootfs (2.408.40) xenial; urgency=medium

  [ Cody Shepherd ]
  * Increasing modularity in relocation of /etc/resolv.conf to enable users
    of live-build/functions to manipulate /etc/resolv.conf in a more
    granular and future-proof way.  LP: #1801134.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 01 Nov 2018 13:46:47 -0700

livecd-rootfs (2.408.39) xenial; urgency=medium

  * Backport support for building ubuntu-core images with ubuntu-image (using
    IMAGEFORMAT=ubuntu-image).
  * Decide what model assertion series to fetch depending on the suite. Use 16
    for xenial and 18 for other series (bionic+). This enables core18 image
    builds (LP: #1799736).

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 04 Oct 2018 19:30:17 +0200

livecd-rootfs (2.408.38) xenial; urgency=medium

  * ubuntu-cpc: Handle a pre-existing /lib/modules in 030-root-tarball.hook
    (LP: #1797170).

 -- Daniel Watkins <oddbloke@ubuntu.com>  Wed, 10 Oct 2018 11:55:30 -0400

livecd-rootfs (2.408.37) xenial; urgency=medium

  * debian/dirs: add debian/dirs entry for empty includes.chroot dir
    (LP: #1794383)

 -- Robert C Jennings <robert.jennings@canonical.com>  Tue, 25 Sep 2018 20:24:49 -0500

livecd-rootfs (2.408.36) xenial; urgency=medium

  * Update unminimize script text and install ubuntu-standard when
    unminimizing a minimal image (LP: #1778777)
